--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+remember-me-key=${REMEMBER_ME_KEY:foobar}
