--- a/src/main/resources/ticketing.yml
+++ b/src/main/resources/ticketing.yml
@@ -35,21 +35,19 @@ paths:
           required: false
           schema:
             type: string
-            enum: [new, in_progress, resolved]
+            enum: [NEW, IN_PROGRESS, RESOLVED]
         - name: id
           in: query
           required: false
           schema:
-            type: integer
+            type: long
       responses:
         '200':
           description: A list of tickets
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Ticket'
+                $ref: '#/components/schemas/TicketPage'
     post:
       summary: Create a new ticket
       operationId: createTicket
@@ -108,7 +106,7 @@ paths:
               properties:
                 status:
                   type: string
-                  enum: [new, in_progress, resolved]
+                  enum: [NEW, IN_PROGRESS, RESOLVED]
       responses:
         '200':
           description: Ticket status updated
@@ -199,6 +197,17 @@ components:
           type: string
         password:
           type: string
+    TicketPage:
+      type: object
+      properties:
+        totalPages:
+          type: integer
+        totalElements:
+          type: string
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/Ticket'
     Ticket:
       type: object
       properties:
@@ -233,13 +242,13 @@ components:
           $ref: '#/components/schemas/Status'
     Status:
       type: string
-      enum: [new, in_progress, resolved]
+      enum: [NEW, IN_PROGRESS, RESOLVED]
     Priority:
       type: string
-      enum: [low, medium, high]
+      enum: [LOW, MEDIUM, HIGH]
     Category:
       type: string
-      enum: [network, hardware, software, other]
+      enum: [NETWORK, HARDWARE, SOFTWARE, OTHER]
     Comment:
       type: object
       properties:
