[feature/ISSUE-7-comments] Add support updating comments

--- a/src/main/resources/ticketing.yml
+++ b/src/main/resources/ticketing.yml
@@ -78,7 +78,7 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: long
       responses:
         '200':
           description: Ticket details
@@ -96,7 +96,7 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: long
       requestBody:
         required: true
         content:
@@ -167,12 +167,12 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: long
         - name: commentId
           in: path
           required: true
           schema:
-            type: integer
+            type: long
       requestBody:
         required: true
         content:
@@ -185,6 +185,10 @@ paths:
       responses:
         '200':
           description: Comment updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
 
 components:
   schemas:
@@ -210,7 +214,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: long
         title:
           type: string
         description:
@@ -264,7 +268,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: long
         text:
           type: string
         created_at:
@@ -273,7 +277,7 @@ components:
         created_by:
           $ref: '#/components/schemas/Account'
         ticket_id:
-          type: integer
+          type: long
     CommentCreate:
       type: object
       required: [text]
@@ -284,7 +288,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
+          type: long
         username:
           type: string
   securitySchemes:
