[feature/ISSUE-15-docker] Update code to support oracle dialect

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<org.openapitools.version>0.2.1</org.openapitools.version>
 		<org.jacoco.version>0.8.12</org.jacoco.version>
 		<org.apache.maven.plugins.version>3.8.1</org.apache.maven.plugins.version>
-		<com.oracle.database.spring.version>24.4.0</com.oracle.database.spring.version>
+		<com.oracle.database.jdbc.version>23.7.0.25.01</com.oracle.database.jdbc.version>
 		<org.springframework.data.version>3.4.0</org.springframework.data.version>
 	</properties>
 	<dependencies>
@@ -93,6 +93,12 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-envers</artifactId>
 			<version>${org.springframework.data.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<version>${com.oracle.database.jdbc.version}</version>
 		</dependency>
 	</dependencies>
 
