--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.2'
 
 services:
   app:
-    image: my-spring-boot-app
+    image: azihassan/ticketing:v0.0.1
     depends_on:
       - oracle-db
     environment:
