--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=ticketing
 spring.liquibase.change-log=db/changelog/master.xml
 spring.security.enabled=false
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/FREE
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=system
+spring.datasource.password=oracle
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 remember-me-key=${REMEMBER_ME_KEY:foobar}
