--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=Oracle;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=Oracle
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
