--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   app:
     image: azihassan/ticketing:v0.0.1
     depends_on:
-      - oracle-db
+      oracle-db:
+        condition: service_healthy
     environment:
       - SPRING_DATASOURCE_URL=jdbc:oracle:thin:@oracle-db:1521/FREE
       - SPRING_DATASOURCE_USERNAME=system
@@ -17,6 +18,10 @@ services:
     image: gvenzl/oracle-free
     environment:
       - ORACLE_PASSWORD=oracle
-      - ORACLE_DATABASE=FREE
     ports:
       - "1521:1521"
+    healthcheck:
+      test: ["CMD", "healthcheck.sh"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
